src/Component/Details/details.css
.main{
    display: inline-block;
    margin-left:5%;
    font-family: 'Comfortaa', sans-serif;
    padding:10px;
    margin:10px;
}

.tileImage{
    width:48%;
    float: left;
    padding:1px;
    /* margin:1px; */
}

.tileContent{
    width:50%;
    margin-left: 2%;
    margin-top:2%;
    float: left;
    padding:20px;
    background-color: yellow;
    border-radius: 20px;
    border:solid 1px black;
}

.content{
    /* border:solid black 1px; */
}

#restaurantname{
    font-size: 40px;
    text-shadow: black;
    font-weight: 800;
}

#locationcontainer{
    display:block;
    /* justify-content: center; */
}

#locationcontainer a {
  display: flex;
  align-items: center; /* vertically center */
  gap: 5px; /* spacing between text and icon */
}

#locationicon{
    width:20px;
}

.imageClass > img{
    height: 600px;
    width:95%;
    margin-left: 3%;
    margin-top: 3%;
    border-radius:15px;
    border:solid 1px turquoise;
}


#cfeedback{
    margin-left:3%;
    color:green;
    font-size: x-small;
}

#iconcontainer{
    border:solid 1px black;
    border-radius:3px;
    padding:5px;
}

.icons{
    display: inline-block;
    margin-left:2%
}
.icons >img{
    width: 50px;

}

.buttonnav{
    padding:25px;
    background-color: black;
    color:white;
    border-radius: 30px;
}

.buttonnav:hover{
    transform:scale(1.05);
}

.buttonnavpay{
    padding:25px;
    background-color: green;
    color:white;
    border-radius: 30px;
    margin-left:5px;
}

.buttonnavpay:hover{
    transform:scale(1.05);
}

#imagecontainer{
    border: solid 1px black;
    margin:5px;
    padding:5px;
    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
    
}

.mealtypeicon{
    padding:25px;
    background-color: black;
    border-radius:10px;
    color:white;
    margin-left:2px;
    transition: transform 0.2s ease;
}

.foodtypeicon{
    padding:25px;
    background-color: black;
    border-radius:10px;
    color:white;
    margin-left:2px;
}

.mealtypeicon:hover{
    transform:scale(1.02);
    transition: transform 0.2s ease;
    background-color: white;
    color:black;
}

.foodtypeicon:hover{
    transform:scale(1.02);
    background-color: white;
    color:black;
}

#stock{
    font-size: 30px;
    color:green
}

#pricecontainer{
    padding:25px;
    background-color: black;
    color:white;
    border-radius: 30px;
}

#pricecontainertext{
    font-size: 25px;
}

.button{
    height:48px;
    width:250px;
    font-size:20px;
}
#Atoc{
    background-color:green
}


@media (max-width: 767px) {

    .tileImage{
        display:block;
        padding:1px;
        width:100%;
        /* margin:1px; */
    }

    .content{
        display:block;
    }

    .imageClass > img{
        /* width:95%; */
        margin-left: 3%;
        margin-top: 3%;
        border-radius:15px;
        border:solid 1px turquoise;
    }


    .tileContent{
        display:block;
        width:100%;
        margin-left: 2%;
        margin-top:2%;
        padding:20px;
        background-color: yellow;
        border-radius: 20px;
        border:solid 1px black;
    }


    #pricecontainer{
        padding:10px;
        background-color: black;
        color:white;
        border-radius: 30px;
    }

    #pricecontainertext{
        font-size: 15px;
    }

    .mealtypeicon{
        padding:10px;
        background-color: black;
        border-radius:10px;
        color:white;
        margin-top:2px;
        transition: transform 0.2s ease;
        display:block;  
        text-align: center;
    }

    .foodtypeicon{
        padding:10px;
        background-color: black;
        border-radius:10px;
        color:white;
        display:block;
        text-align: center;
        margin-top:2px;
    }

    .buttonnav{
        padding:15px;
        background-color: black;
        color:white;
        border-radius: 30px;
        font-size: 12px;
    }

    .buttonnavpay{
        padding:15px;
        background-color: green;
        color:white;
        border-radius: 30px;
        font-size: 12px;
    }


}

@media (min-width: 768px) {

}

/* Desktop */
@media (min-width: 1024px) {

}

/* Large Desktop */
@media (min-width: 1280px) {

}

